Fix Mockito build warnings