@@ -162,6 +162,20 @@
 
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>${plugin.dependency}</version>
+                        <executions>
+                            <execution>
+                                <id>properties</id>
+                                <goals>
+                                    <goal>properties</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>${plugin.surefire}</version>
                         <configuration>
@@ -171,6 +185,7 @@
                             </includes>
                             <forkCount>${test.maxForks}</forkCount>
                             <reuseForks>true</reuseForks>
+                            <argLine>-javaagent:${org.mockito:mockito-core:jar} -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                         </configuration>
                     </plugin>
                 </plugins>
